--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=39.106.110.180
 DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=Yszls2018!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
